# MOHRE_AI

./: .env.example  PROJECT_CLEANUP_SUMMARY.md  README.md  TEST_RESULTS_SUMMARY.md  conftest.py  gui_app.py  main.py  pyproject.toml  requirements.txt  test_basic_functionality.py  test_classifier.py  test_document_processing.py
data/: mohre_services.json
docs/: DOCUMENT_AI_INTEGRATION_COMPLETE.md  document_ai_setup_complete.md  document_ai_setup_guide.md  ocr_comparison_summary.md
scripts/: setup_document_ai.py
src/: __init__.py  attestation_utils.py  classifier.py  config.py  copy_models_and_dataset.py  crop_yolo_detections.py  document_ai_processor.py  document_processing_pipeline.py  document_processor_v5.py  email_parser.py  enhanced_document_processor.py  google_ai_rotation.py  google_vision_orientation_detector.py  gui_app.py  image_compression_utils.py  logger.py  main_pipeline.py  mobilenet_training.py  output_saving_utils.py  parse_salary_docx.py  passport_ocr_processor.py  pdf_converter.py  resnet18_classifier.py  service_detector.py  simple_text_orientation_detector.py  structure_with_gemini.py  yolo_crop_ocr_pipeline.py
tests/: conftest.py  test_current_issue.py  test_document_ai_simple.py  test_ocr_fallback.py  test_service_detector.py
tests/unit/: test_document_processing_validations.py  test_image_utils_unit.py  test_output_saving_utils.py
